Editing my Store Adding Product Alerts

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -16,6 +16,14 @@
     Share
   </button>
 
+  <button type="button" (click)="share()">
+    Share
+  </button>
+  
+  <app-product-alerts
+    [product]="product">
+  </app-product-alerts>
+
 </div>
 
 
